[gd_scene load_steps=20 format=2]

[ext_resource path="res://Sound/Music/Burning Heart (End CG) (1).wav" type="AudioStream" id=1]
[ext_resource path="res://Sound/Music/WalkA.wav" type="AudioStream" id=2]
[ext_resource path="res://Sound/Music/Game Over.wav" type="AudioStream" id=3]
[ext_resource path="res://Sound/Music/Lantern-Lit.wav" type="AudioStream" id=4]
[ext_resource path="res://Sound/Music/Cook.wav" type="AudioStream" id=5]
[ext_resource path="res://Sound/Music/WalkB.wav" type="AudioStream" id=6]
[ext_resource path="res://Sound/Music/HuntA.wav" type="AudioStream" id=7]
[ext_resource path="res://Sound/Music/HuntB_1.wav" type="AudioStream" id=8]
[ext_resource path="res://Sound/Music/ChopB.wav" type="AudioStream" id=9]
[ext_resource path="res://Sound/Music/Lantern-Proximity.wav" type="AudioStream" id=10]
[ext_resource path="res://Sound/Music/Marshmallows-_Title_.wav" type="AudioStream" id=11]
[ext_resource path="res://Sound/Music/ChopA.wav" type="AudioStream" id=12]
[ext_resource path="res://Level/Music.gd" type="Script" id=13]
[ext_resource path="res://Sound/SFX/Meat Cooked.wav" type="AudioStream" id=14]
[ext_resource path="res://Sound/SFX/Bridge Built.wav" type="AudioStream" id=15]
[ext_resource path="res://Sound/SFX/Tree Fall.wav" type="AudioStream" id=16]
[ext_resource path="res://Sound/SFX/Punpun Dies.wav" type="AudioStream" id=17]
[ext_resource path="res://Sound/SFX/Eat.wav" type="AudioStream" id=18]
[ext_resource path="res://Sound/SFX/Lantern Stoked.wav" type="AudioStream" id=19]

[node name="MusicGlobal" type="Node"]
script = ExtResource( 13 )

[node name="WHACK" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -80.0
autoplay = true

[node name="Burning Heart" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="ChopA" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -25.0

[node name="ChopB" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -25.0

[node name="Cook" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="Game Over" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="HuntA" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -23.0

[node name="HuntB" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -23.0

[node name="Lantern Lit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="Lantern Proximity" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -10.0

[node name="Title" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0

[node name="WalkA" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -25.0

[node name="WalkB" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -25.0

[node name="Bridge Built" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="Eat" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="Lantern Stoked" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )

[node name="Meat Cooked" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="Punpun Dies" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="Tree Fall" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
